--- a/app/src/main/res/layout/like_card.xml
+++ b/app/src/main/res/layout/like_card.xml
@@ -6,16 +6,8 @@
     android:orientation="horizontal"
     android:padding="5dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userpic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:src="@drawable/penguin"
-        app:civ_border_color="@color/colorAccent"
-        app:civ_border_width="1dp" />
-
     <TextView
+        android:alpha="0"
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,6 +18,16 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:alpha="0"
+        android:id="@+id/userpic"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:src="@drawable/penguin"
+        app:civ_border_color="@color/colorAccent"
+        app:civ_border_width="1dp" />
 
 
     <ImageButton
