--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -33,10 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="@color/white"
-
         android:id="@+id/appbarlayout"
-        android:fitsSystemWindows="true"
-        app:elevation="3dp">
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsetoolbar"
