--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,12 +12,9 @@
         <item name="android:windowAnimationStyle">@style/AppTheme.Animation</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
-        <item name="actionBarStyle">@style/SupporActbar</item>
+
     </style>
 
-    <style name="SupporActbar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="android:homeAsUpIndicator">@drawable/ic_left_arrow</item>
-    </style>
 
     <style name="Settingslist" parent="Widget.AppCompat.TextView">
          <item name="android:drawablePadding">5dp</item>
@@ -65,6 +62,7 @@
     </style>
 
     <style name="AppToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="android:elevation">3dp</item>
         <item name="titleTextAppearance">@style/ToolbarTitle</item>
     </style>
 
