--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,16 +47,15 @@
                 app:contentScrim="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_margin="15dp"
-                    android:hint="Escreve o que tiver em mente"
+                    android:layout_width="match_parent"
+                    android:text="Escreve o que tiver em mente"
                     android:textStyle="bold"
                     android:id="@+id/addquote"
-                    android:textColorHint="@color/white"
+                    android:textColor="@color/white"
                     android:padding="10dp"
                     android:background="@drawable/post_button"
                     android:textAlignment="center"
-                    android:textSize="26sp"
+                    android:textSize="28sp"
                     android:layout_height="wrap_content" />
 
 
