--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -67,30 +67,6 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:padding="5dp"
-            android:id="@+id/likes"
-            android:alpha="0"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:button="@drawable/favoritecheck"
-                android:textColor="@color/grey_800" />
-
-            <TextView
-                android:id="@+id/likecount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="2dp"
-                android:layout_marginBottom="2dp"
-                android:textColor="@color/black" />
-        </LinearLayout>
 
 
         <androidx.cardview.widget.CardView
@@ -137,6 +113,31 @@
 
 
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:id="@+id/likes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <CheckBox
+                android:id="@+id/like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/favoritecheck"
+                android:textColor="@color/grey_800" />
+
+            <TextView
+                android:id="@+id/likecount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="2dp"
+                android:layout_marginBottom="2dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
 
     </LinearLayout>
