--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,15 @@
         <item name="android:windowAnimationStyle">@style/AppTheme.Animation</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
+        <item name="searchViewStyle">@style/Searchtheme</item>
+
 
     </style>
 
+    <style name="Searchtheme" parent="Widget.AppCompat.Light.SearchView">
+        <item name="android:background">@drawable/round</item>
+        <item name="queryBackground">@color/transparent</item>
+    </style>
 
     <style name="Settingslist" parent="Widget.AppCompat.TextView">
          <item name="android:drawablePadding">5dp</item>
@@ -47,7 +53,6 @@
     </style>
 
     <style name="TabsTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
-        <item name="android:padding">5dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
