--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -7,7 +7,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".View.fragments.ProfileFragment">
 
-
+    <com.github.mmin18.widget.RealtimeBlurView
+        android:id="@+id/rootblur"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:realtimeBlurRadius="50dp"
+        app:realtimeOverlayColor="@color/transparent" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myquotesrecycler"
         android:layout_width="match_parent"
