--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         <com.creat.motiv.Utils.Typewritter
              android:id="@+id/apptext"
             android:textColor="@color/colorPrimaryDark"
-            style="@style/TabsTextStyle"
+            android:textSize="22sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
