--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,8 +1,8 @@
 <vector android:autoMirrored="true" android:height="24dp"
-    android:viewportWidth="519.9981"
-    android:viewportHeight="519"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path
         android:fillColor="#FF000000"
-        android:pathData="m400.352,383.102c36.066,-40.27 56.008,-92.434 55.996,-146.492 0,-121.367 -98.742,-220.113 -220.113,-220.113 -121.492,-0.121 -220.234,98.621 -220.234,219.988s98.742,220.113 220.113,220.113c54.074,0.09 106.262,-19.859 146.488,-56l99.492,99.496c2.348,2.359 5.551,3.668 8.875,3.625 3.316,-0.016 6.5,-1.316 8.879,-3.625 2.336,-2.34 3.652,-5.508 3.652,-8.813s-1.316,-6.48 -3.652,-8.813zM41,236.484c0,-107.617 87.492,-195.109 195.113,-195.109 107.613,0 195.109,87.492 195.109,195.109s-87.496,195.113 -195.109,195.113c-107.621,0.121 -195.113,-87.496 -195.113,-195.113zM41,236.484" />
+        android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z" />
 </vector>
