--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -50,49 +50,56 @@
             android:layout_height="wrap_content"
             app:expandedTitleGravity="top|center"
             app:titleEnabled="false">
-
-
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="15dp"
-                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_marginTop="55dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 app:layout_collapseMode="parallax">
 
-                <TextView
-                    android:id="@+id/posts"
-                    android:layout_width="wrap_content"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="5dp"
-                    android:text="Posts"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/posts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="5dp"
+                        android:text="Posts"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
 
+                </LinearLayout>
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profilepic"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
                     android:foreground="?attr/selectableItemBackground"
-                    android:padding="10dp"
+                    android:padding="5dp"
                     android:src="@drawable/notfound"
                     android:tooltipText="Clique na foto para alterá-la"
                     app:civ_border_color="@color/colorAccent"
                     app:civ_border_width="1dp" />
+
+
             </LinearLayout>
+
             <androidx.appcompat.widget.Toolbar
-                android:layout_gravity="top"
-                app:layout_collapseMode="pin"
-                app:title="@string/username"
-                app:titleTextAppearance="@style/ToolbarTitle"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="top"
+                android:background="@drawable/bottom_line"
+                app:layout_collapseMode="pin"
+                app:title="@string/username"
+                app:titleTextAppearance="@style/ToolbarTitle" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
