--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,7 +49,6 @@
 
     <style name="AppTheme.Animation" parent="@android:style/Animation.Activity">
         <item name="android:windowEnterAnimation">@anim/fade_in</item>
-        <item name="android:windowExitAnimation">@anim/pop_out</item>
     </style>
 
     <style name="TabsTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
@@ -71,7 +70,7 @@
     </style>
 
     <style name="ToolbarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:fontFamily">@font/nunitoblack</item>
+        <item name="android:fontFamily">@font/nunito_semibold</item>
         <item name="android:textSize">20sp</item>
         <item name="android:padding">5dp</item>
     </style>
