--- a/app/src/main/res/drawable/rounds.xml
+++ b/app/src/main/res/drawable/rounds.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/lblack">
+    <item>
+        <shape android:shape="rectangle">
 
-    <corners android:radius="15dp" />
+            <corners android:radius="15dp" />
 
-    <!-- below code for different radius for each corner. -->
-
-
-    <!-- <corners -->
-    <!-- android:bottomLeftRadius="7dp" -->
-    <!-- android:bottomRightRadius="10dp" -->
-    <!-- android:topLeftRadius="12dp" -->
-    <!-- android:topRightRadius="5dp" /> -->
+            <!-- below code for different radius for each corner. -->
 
 
-    <!-- Background color -->
-    <solid android:color="@color/white" />
+            <!-- <corners -->
+            <!-- android:bottomLeftRadius="7dp" -->
+            <!-- android:bottomRightRadius="10dp" -->
+            <!-- android:topLeftRadius="12dp" -->
+            <!-- android:topRightRadius="5dp" /> -->
 
-</shape>
+
+            <!-- Background color -->
+            <solid android:color="@color/white" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/grey_300" />
+
+        </shape>
+
+    </item>
+</ripple>
