--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,29 +47,29 @@
 
 
             <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 app:layout_collapseMode="parallax">
 
 
+                <Button
+                    android:id="@+id/edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_button"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:text="Editar Perfil"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ripple_button"
-                        android:minWidth="0dp"
-                        android:minHeight="0dp"
-                        android:text="Editar Perfil"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/posts"
@@ -81,19 +81,19 @@
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
-                </LinearLayout>
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profilepic"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="5dp"
-                    android:src="@drawable/notfound"
-                    android:tooltipText="Clique na foto para alterá-la"
-                    app:civ_border_color="@color/colorAccent"
-                    app:civ_border_width="1dp" />
 
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profilepic"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_gravity="center"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:padding="5dp"
+                        android:src="@drawable/notfound"
+                        android:tooltipText="Clique na foto para alterá-la"
+                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_width="1dp" />
+                </LinearLayout>
 
             </LinearLayout>
 
