--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,67 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
+<layout
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.fragments.ProfileFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.github.mmin18.widget.RealtimeBlurView
-        android:id="@+id/rootblur"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        app:realtimeBlurRadius="50dp"
-        app:realtimeOverlayColor="@color/transparent" />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myquotesrecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/grey_100"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        android:paddingStart="0dp"
-        android:paddingEnd="0dp" />
-
-    <ProgressBar
-        android:id="@+id/loading"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@drawable/circle" />
-
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
         android:background="@color/white"
-        android:id="@+id/appbarlayout"
-        android:fitsSystemWindows="true">
+        tools:context=".View.fragments.ProfileFragment">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsetoolbar"
-            app:contentScrim="@color/white"
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="0"
+            android:progressDrawable="@drawable/circle" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/myquotesrecycler"
             android:layout_width="match_parent"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            android:layout_height="match_parent"
+            android:background="@color/grey_100"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
+        <com.github.mmin18.widget.RealtimeBlurView
+            android:id="@+id/rootblur"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:realtimeBlurRadius="50dp"
+            app:realtimeOverlayColor="@color/transparent" />
+
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarlayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:expandedTitleGravity="top|center"
-            app:titleEnabled="false">
-            <LinearLayout
+            android:background="@color/white"
+            android:fitsSystemWindows="true">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_marginTop="55dp"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="top"
+                android:background="@drawable/bottom_line"
+                app:title="@string/username"
+                app:titleTextAppearance="@style/ToolbarTitle" />
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsetoolbar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_collapseMode="parallax">
-
-
+                app:contentScrim="@color/white"
+                app:expandedTitleGravity="top|center"
+                app:layout_scrollFlags="exitUntilCollapsed|scroll"
+                app:titleEnabled="false">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/posts"
@@ -74,36 +79,29 @@
                         android:textColor="@color/black"
                         android:textSize="20sp" />
 
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profilepic"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+
+                        android:layout_gravity="center"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:padding="5dp"
+                        android:src="@drawable/notfound"
+                        android:tooltipText="Clique na foto para alterá-la"
+                        android:transitionName="profilepic"
+                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_width="1dp" />
                 </LinearLayout>
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profilepic"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="5dp"
-                    android:src="@drawable/notfound"
-                    android:tooltipText="Clique na foto para alterá-la"
-                    app:civ_border_color="@color/colorAccent"
-                    app:civ_border_width="1dp" />
 
 
-            </LinearLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="top"
-                android:background="@drawable/bottom_line"
-                app:layout_collapseMode="pin"
-                app:title="@string/username"
-                app:titleTextAppearance="@style/ToolbarTitle" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
+
