--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -268,6 +268,7 @@
     <color name="lwhite">#CCFFFFFF</color>
     <color name="lblack">#CC000000</color>
     <color name="owhite">#0DFFFFFF</color>
+    <color name="oblack">#40000000</color>
     <color name="transparent">#00ffffff</color>
 
 
