--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -60,24 +60,15 @@
                 android:layout_height="wrap_content"
                 app:contentScrim="@color/white"
                 app:expandedTitleGravity="top|center"
-                app:layout_scrollFlags="exitUntilCollapsed|scroll"
+                app:layout_scrollFlags="scroll|enterAlways"
                 app:titleEnabled="false">
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/posts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="5dp"
-                        android:text="Posts"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profilepic"
@@ -92,6 +83,18 @@
                         android:transitionName="profilepic"
                         app:civ_border_color="@color/colorAccent"
                         app:civ_border_width="1dp" />
+
+                    <TextView
+                        android:id="@+id/posts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="5dp"
+                        android:text="Posts"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
+
                 </LinearLayout>
 
 
